projects/documentation/src/components/styles.css
/* ... */
docs-page:not(:defined) code-example {
    color: var(--spectrum-body-3-text-color, var(--spectrum-alias-text-color));
}

sp-sidenav:not(:defined) {
    display: block;
    list-style: none;
}

sp-sidenav-item:not([tabindex]) {
    display: list-item;
    list-style-type: none;
}

docs-page > sp-sidenav {
    content-visibility: auto;
}

docs-page > sp-sidenav-item {
    content-visibility: auto;
    contain-intrinsic-size: 40px;
}

sp-sidenav > sp-sidenav-item.spectrum-web {
    margin-top: 80px;
    display: block;
}

sp-sidenav-item:not(:defined) a,
sp-sidenav-item:not(:defined) span {
    min-height: var(
        --spectrum-sidenav-item-height,
        var(--spectrum-alias-single-line-height)
    );
    color: var(--spectrum-body-3-text-color, var(--spectrum-alias-text-color));
    padding: var(--spectrum-global-dimension-size-65)
        var(
            --spectrum-sidenav-item-padding-x,
            var(--spectrum-global-dimension-size-150)
        );
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: left;
    box-sizing: border-box;
    width: 100%;
    min-height: var(
        --spectrum-sidenav-item-height,
        var(--spectrum-alias-single-line-height)
    );
    font-size: var(
        --spectrum-sidenav-item-text-size,
        var(--spectrum-alias-font-size-default)
    );
    font-style: normal;
    font-weight: var(
        --spectrum-sidenav-item-font-weight,
        var(--spectrum-global-font-weight-regular)
    );
    word-break: break-word;
    hyphens: auto;
    cursor: pointer;
    background-color: var(
        --spectrum-sidenav-item-background-color,
        var(--spectrum-alias-background-color-transparent)
    );
    color: var(
        --spectrum-sidenav-item-text-color,
        var(--spectrum-alias-text-color)
    );
    text-decoration: none;
}

sp-sidenav-item:not(:defined) span,
sp-sidenav > sp-sidenav-item[multilevel]:not(:defined) > a {
    font-weight: var(--spectrum-global-font-weight-bold);
}

sp-sidenav-item:not(:defined) span,
sp-sidenav > sp-sidenav-item:not(:defined) > a {
    padding-left: var(
        --spectrum-sidenav-item-padding-x,
        var(--spectrum-global-dimension-size-150)
    );
}

sp-sidenav-item[expanded]
    > sp-sidenav-item[expanded]
    > sp-sidenav-item:not(:defined)
    > a {
    padding-left: calc(
        var(
                --spectrum-sidenav-multilevel-item-indentation-level2,
                var(--spectrum-global-dimension-size-300)
            ) +
            var(
                --spectrum-sidenav-item-padding-x,
                var(--spectrum-global-dimension-size-150)
            )
    );
}

sp-sidenav-item:not([expanded], :defined) > sp-sidenav-item {
    display: none;
}

sp-sidenav-item:not(:defined) a {
    padding-left: calc(
        var(
                --spectrum-sidenav-multilevel-item-indentation-level1,
                var(--spectrum-global-dimension-size-150)
            ) +
            var(
                --spectrum-sidenav-item-padding-x,
                var(--spectrum-global-dimension-size-150)
            )
    );
}

docs-page:not(:defined) .header-anchor {
    display: none;
}

sp-divider[size='l']:not(:defined) {
    display: block;
    height: 4px;
}

sp-divider[size='m']:not(:defined) {
    display: block;
    height: 2px;
}

sp-divider[size='s']:not(:defined) {
    display: block;
    height: 2px;
}

.hero {
    margin-bottom: 4em;
}

.hero .spectrum-Heading {
    margin: var(--spectrum-global-dimension-size-100) 0
        var(--spectrum-global-dimension-size-200) 0;
}

#hero-buttons {
    margin-top: 2em;
}

#features {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.feature {
    flex: 0 1 calc(50% - 30px);
    padding: 0 0 20px;
    box-sizing: border-box;
}

@media screen and (max-width: 1100px) {
    .feature {
        flex: 0 1 calc(50% - 30px);
    }

    .feature:first-of-type {
        flex-basis: 100%;
    }
}

@media screen and (max-width: 960px) {
    .feature {
        flex: 0 1 calc(33.33% - 30px);
    }

    .feature:first-of-type {
        flex: 0 1 calc(33.33% - 30px);
    }
}

@media screen and (max-width: 725px) {
    .feature {
        flex: 0 1 calc(50% - 30px);
    }

    .feature:first-of-type {
        flex-basis: 100%;
    }
}

@media screen and (max-width: 525px) {
    .feature {
        flex: 0 1 100%;
    }
}

.example {
    margin-top: 2em;
}

.spectrum-Heading--sizeS {
    margin-bottom: 16px;
}

#title-header {
    margin-bottom: 2rem;
}

#title-header h1,
.hero h1 {
    margin: var(--spectrum-global-dimension-size-100) 0;
}

@media screen and (max-width: 768px) {
    #title-header h1,
    .hero h1 {
        font-size: 44px;
        letter-spacing: normal;
    }
}

.spectrum-Body code {
    color: var(--spectrum-global-color-blue-700);
}

.spectrum-Article .spectrum-Heading1--display {
    margin-bottom: 28px;
}

.headerContainer sp-divider {
    margin-bottom: 33px;
}

article {
    margin-bottom: 3em;
}

.table-container > sp-table-body,
.table-container > sp-table-header {
    overflow: visible;
    min-width: max-content;
}

.table-container > sp-table-body {
    --spectrum-table-row-background-color: var(--spectrum-global-color-gray-75);
}

.table-container {
    overflow: auto;
    margin: 0 calc(-1 * var(--spectrum-global-dimension-size-700));
}

.table-container > sp-table {
    max-width: 1080px;
    width: min-content;
    padding: 0 var(--spectrum-global-dimension-size-700);
    box-sizing: border-box;
    align-items: stretch;
    min-width: 100%;
}

.table-container sp-table-cell,
.table-container sp-table-head-cell {
    box-sizing: border-box;
    word-break: break-word;
    min-width: var(--spectrum-global-dimension-size-1250);
}

sp-table.attributes sp-table-cell,
sp-table.attributes sp-table-head-cell {
    flex: 0 0 17%;
}

sp-table .description {
    min-width: var(--spectrum-global-dimension-size-1600);
}
/* ... */

